--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -51,7 +51,7 @@
 				<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
 						Command="{Binding SignLoggedUserCommand}"
 						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-					Visibility="{Binding TranslationOptions.CloudCredentials.UserID, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
+						Visibility="{Binding TranslationOptions.CloudCredentials.UserID, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
 						Cursor="Hand"
 						HorizontalAlignment="Center"
 						Width="200"
@@ -68,7 +68,7 @@
 					</Button.Content>
 				</Button>
 
-				<Button Content="Single sign-on"
+				<Button Content="{x:Static root:PluginResources.Auth_Cloud_SSO}"
 						Style="{StaticResource Sdl.Button.PrimaryStyle}"
 						Command="{Binding SelectAuthenticationTypeCommand}"
 						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
@@ -76,14 +76,14 @@
 						Cursor="Hand"
 						Width="200"
 						Margin="0 8" />
-				<Button Content="User credentials"
+				<Button Content="{x:Static root:PluginResources.Auth_Cloud_Credentials}"
 						Style="{StaticResource Sdl.Button.PrimaryStyle}"
 						Command="{Binding SelectAuthenticationTypeCommand}"
 						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
 						Cursor="Hand"
 						Width="200"
 						Margin="0 8" />
-				<Button Content="User secret"
+				<Button Content="{x:Static root:PluginResources.Auth_Cloud_Secrets}"
 						Style="{StaticResource Sdl.Button.PrimaryStyle}"
 						Command="{Binding SelectAuthenticationTypeCommand}"
 						CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
@@ -111,47 +111,71 @@
 				<!-- User ID -->
 				<TextBlock Grid.Row="0"
 						   Grid.Column="0"
-						   Text="User ID"
+						   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
 						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 						   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-						   VerticalAlignment="Center" />
+						   VerticalAlignment="Center" 
+						   Focusable="True"/>
 
 				<TextBox Grid.Row="0"
 						 Grid.ColumnSpan="2"
 						 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
 						 Style="{StaticResource WatermarkTextBox}"
-						 controls:TextBoxWatermarkHelper.WatermarkText="User ID"
+						 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
 						 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
+						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=UserId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 						 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 						 Margin="0 8" />
 				<!-- User ID -->
 
 				<!-- Password -->
+				<TextBlock Grid.Row="1"
+						   Grid.Column="0"
+						   Text="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
+						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+						   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						   VerticalAlignment="Center"
+						   Focusable="True"/>
+				
 				<PasswordBox Grid.Row="1"
 							 Grid.ColumnSpan="2"
 							 PasswordChanged="UserPassword_Changed"
 							 Style="{StaticResource WatermarkPasswordBox}"
-							 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
+							 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
 							 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
 				<!-- Password -->
 
 				<!-- Client ID -->
-				<TextBox Grid.Row="0"
+				<TextBlock Grid.Row="2"
+						   Grid.Column="0"
+						   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+						   Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						   VerticalAlignment="Center"
+						   Focusable="True" />
+				
+				<TextBox Grid.Row="2"
 						 Grid.ColumnSpan="2"
 						 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
 						 Style="{StaticResource WatermarkTextBox}"
-						 controls:TextBoxWatermarkHelper.WatermarkText="Client ID"
+						 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
 						 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="CliendId"
+						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ClientId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 						 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 						 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 						 Margin="0 8" />
 				<!-- Client ID -->
 
 				<!-- Client Secret -->
-
+				<TextBlock Grid.Row="3"
+						   Grid.Column="0"
+						   Text="{x:Static root:PluginResources.Auth_Cloud_ClientSecret}"
+						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+						   Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						   VerticalAlignment="Center"
+						   Focusable="True" />
+				
 				<PasswordBox Grid.Row="3"
 							 Grid.ColumnSpan="2"
 							 PasswordChanged="ClientSecret_Changed"
@@ -163,7 +187,7 @@
 
 			<Button Grid.Row="2"
 					Grid.ColumnSpan="2"
-					Content="Sign in"
+					Content="{x:Static root:PluginResources.Auth_SignIn}"
 					Command="{Binding SignInCommand}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -173,7 +197,7 @@
 
 			<Button Grid.Row="3"
 					Grid.ColumnSpan="2"
-					Content="Change authentication type"
+					Content="{x:Static root:PluginResources.Auth_ChangeAuthType}"
 					Command="{Binding BackCommand}"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
