--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -14,7 +14,6 @@
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance local:CredentialsMainViewModel}"
-		Background="#f4f4f4"
 		WindowStartupLocation="CenterScreen"
 		Title="Language Weaver Provider"
 		ResizeMode="NoResize"
@@ -61,6 +60,106 @@
 
 			<style:WindowsControl Grid.Row="0"
 								  Margin="0 24" />
+
+			<Border Grid.Row="1"
+					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
+					Background="#ffffff"
+					CornerRadius="4"
+					Margin="24 0 24 24"
+					Padding="12 24 12 12">
+				<Border.Effect>
+					<DropShadowEffect ShadowDepth="0"
+									  Color="#d4d4d4"
+									  Opacity="1" />
+				</Border.Effect>
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="*" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+
+					<TextBox Grid.Row="0"
+							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+							 Cursor="Arrow"
+							 Text="{x:Static root:PluginResources.MainView_AuthMethods_HelpMessage}"
+							 Visibility="{Binding ProviderView.IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+							 FontSize="14" 
+							 HorizontalAlignment="Center"/>
+
+					<StackPanel Grid.Row="1">
+						<ContentControl Content="{Binding ProviderView}"
+										Focusable="False"
+										Margin="0 8"
+										Grid.Row="1"
+										VerticalAlignment="Bottom" />
+
+						<Button Content="{x:Static root:PluginResources.MainView_AuthMethods_BackBttn}"
+								Command="{Binding BackCommand}"
+								Style="{StaticResource Sdl.Button.SecondaryStyle}"
+								Cursor="Hand"
+								Width="200"
+								Grid.Row="2"
+								VerticalAlignment="Bottom"
+								Margin="0 0 0 8" />
+					</StackPanel>
+				</Grid>
+			</Border>
+
+			<Border Grid.Row="1"
+					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
+					Background="#ffffff"
+					CornerRadius="4"
+					Margin="24 0 24 24"
+					Padding="12 24 12 12">
+				<Border.Effect>
+					<DropShadowEffect ShadowDepth="0"
+									  Color="#d4d4d4"
+									  Opacity="1" />
+				</Border.Effect>
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="*" />
+					</Grid.RowDefinitions>
+
+					<TextBox Grid.Row="0"
+							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+							 Cursor="Arrow"
+							 Text="{x:Static root:PluginResources.MainView_HelpMessage}"
+							 FontSize="14"
+							 HorizontalAlignment="Center" />
+
+					<StackPanel Grid.Row="1"
+								VerticalAlignment="Bottom">
+						
+						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWCloud}"
+								Style="{StaticResource Sdl.Button.PrimaryStyle}"
+								Command="{Binding SelectLanguageWeaverServiceCommand}"
+								CommandParameter="{x:Static root:Constants.CloudService}"
+								Cursor="Hand"
+								Width="200"
+								Margin="0 8" />
+
+						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWEdge}"
+								Style="{StaticResource Sdl.Button.PrimaryStyle}"
+								Command="{Binding SelectLanguageWeaverServiceCommand}"
+								CommandParameter="{x:Static root:Constants.EdgeService}"
+								IsEnabled="False"
+								Cursor="Hand"
+								Width="200"
+								Margin="0 8" />
+
+						<Button Content="{x:Static root:PluginResources.MainView_Buttons_Exit}"
+								Command="{Binding CloseCommand}"
+								Style="{StaticResource Sdl.Button.SecondaryStyle}"
+								Cursor="Hand"
+								Width="200"
+								Margin="0 8" />
+					</StackPanel>
+				</Grid>
+			</Border>
 
 			<Grid Grid.Row="1"
 				  VerticalAlignment="Bottom"
@@ -177,105 +276,6 @@
 				</TextBlock>
 
 			</Grid>
-
-			<Border Grid.Row="1"
-					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
-					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
-					Background="#ffffff"
-					CornerRadius="4"
-					Margin="24 0 24 24"
-					Padding="12 24 12 12">
-				<Border.Effect>
-					<DropShadowEffect ShadowDepth="0"
-									  Color="#d4d4d4"
-									  Opacity="1" />
-				</Border.Effect>
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="*" />
-					</Grid.RowDefinitions>
-
-					<TextBox Grid.Row="0"
-							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Text="Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation."
-							 FontSize="14"
-							 HorizontalAlignment="Center" />
-
-					<StackPanel Grid.Row="1"
-								VerticalAlignment="Bottom">
-						<Button Content="Language Weaver"
-								Style="{StaticResource Sdl.Button.PrimaryStyle}"
-								Command="{Binding SelectLanguageWeaverServiceCommand}"
-								CommandParameter="{x:Static root:Constants.CloudService}"
-								Cursor="Hand"
-								Width="200"
-								Margin="0 8" />
-
-						<Button Content="LW Edge (coming soon)"
-								Style="{StaticResource Sdl.Button.PrimaryStyle}"
-								Command="{Binding SelectLanguageWeaverServiceCommand}"
-								CommandParameter="{x:Static root:Constants.EdgeService}"
-								IsEnabled="False"
-								Cursor="Hand"
-								Width="200"
-								Margin="0 8" />
-
-						<Button Content="Exit"
-								Command="{Binding CloseCommand}"
-								Style="{StaticResource Sdl.Button.SecondaryStyle}"
-								Cursor="Hand"
-								Width="200"
-								Margin="0 8" />
-					</StackPanel>
-				</Grid>
-			</Border>
-
-			<Border Grid.Row="1"
-					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
-					Background="#ffffff"
-					CornerRadius="4"
-					Margin="24 0 24 24"
-					Padding="12 24 12 12">
-				<Border.Effect>
-					<DropShadowEffect ShadowDepth="0"
-									  Color="#d4d4d4"
-									  Opacity="1" />
-				</Border.Effect>
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="*" />
-						<RowDefinition Height="Auto" />
-					</Grid.RowDefinitions>
-
-					<TextBox Grid.Row="0"
-							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Text="Please select the method you'd like to use to log in. You will be asked to log in in the next step."
-							 Visibility="{Binding ProviderView.IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
-							 FontSize="13" />
-
-					<StackPanel Grid.Row="1">
-						<ContentControl Content="{Binding ProviderView}"
-										Focusable="False"
-										Margin="0 8"
-										Grid.Row="1"
-										VerticalAlignment="Bottom" />
-
-						<Button Content="Back"
-								Command="{Binding BackCommand}"
-								Style="{StaticResource Sdl.Button.SecondaryStyle}"
-								Cursor="Hand"
-								Width="200"
-								Grid.Row="2"
-								VerticalAlignment="Bottom"
-								Margin="0 0 0 8" />
-					</StackPanel>
-				</Grid>
-			</Border>
-
 		</Grid>
 	</Border>
 </Window>
