--- a/LanguageWeaverProvider/View/LanguageMappingProviderView.xaml
+++ b/LanguageWeaverProvider/View/LanguageMappingProviderView.xaml
@@ -3,18 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:styles="clr-namespace:LanguageWeaverProvider.Style"
 		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 		xmlns:viewmodel="clr-namespace:LanguageWeaverProvider.ViewModel"
+		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance viewmodel:LanguageMappingProviderViewModel}"
 		Title="Language Mapping"
 		WindowStartupLocation="CenterScreen"
 		WindowStyle="None"
-		ResizeMode="NoResize"
-		MinWidth="750"
+		ResizeMode="CanResize"
+		MinWidth="600"
 		Width="800"
-		MinHeight="420"
+		MinHeight="400"
 		Height="600">
 	
 	<Window.Resources>
@@ -31,6 +33,8 @@
 						Value="HighQuality" />
 			</Style>
 
+			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibility" />
+			
 		</ResourceDictionary>
 	</Window.Resources>
 
@@ -51,9 +55,10 @@
 					 Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
 					 BorderBrush="#FFBFCDD4"
-					 controls:TextBoxWatermarkHelper.WatermarkText="Search language"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.LMPView_SearchBox}"
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="Filter"
+					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Filter, Type={x:Type viewmodel:LanguageMappingProviderViewModel}}"
+					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 					 HorizontalAlignment="Right"
 					 Width="232"
 					 Margin="16 12 16 0" />
@@ -73,35 +78,46 @@
 					  CanUserDeleteRows="False"
 					  Margin="16 16 16 0">
 				<DataGrid.Columns>
-					<DataGridTextColumn Header="Language"
+					<DataGridTextColumn Header="{x:Static root:PluginResources.LMPView_Headers_Language}"
 										Binding="{Binding Path=Name}"
 										IsReadOnly="True"
 										Width="2*" />
-					<DataGridTextColumn Header="Region"
+					<DataGridTextColumn Header="{x:Static root:PluginResources.LMPView_Headers_Region}"
 										Binding="{Binding Path=Region}"
 										IsReadOnly="True"
 										Width="2*" />
-					<DataGridTextColumn Header="Trados code"
+					<DataGridTextColumn Header="{x:Static root:PluginResources.LMPView_Headers_TradosCode}"
 										Binding="{Binding Path=TradosCode}"
 										IsReadOnly="True"
 										Width="1*" />
-					<DataGridTextColumn Header="Language code"
+					<DataGridTextColumn Header="{x:Static root:PluginResources.LMPView_Headers_LanguageCode}"
 										Binding="{Binding Path=LanguageCode, UpdateSourceTrigger=PropertyChanged}"
 										IsReadOnly="False"
 										Width="1*" />
 				</DataGrid.Columns>
 			</DataGrid>
 
-			<TextBlock Text="{Binding LanguagesCountMessage}"
-					   Grid.Row="3"
-					   VerticalAlignment="Top"
-					   Margin="16 5" />
+			<StackPanel Grid.Row="3"
+						Orientation="Horizontal"
+						Margin="16 4">
+				<TextBlock Text="{x:Static root:PluginResources.LMPView_Languages_TotalCount}" />
+				
+				<TextBlock Text="{Binding MappedLanguages.Count}" 
+						   Margin="2 0 0 0"/>
+
+				<TextBlock Text="{x:Static root:PluginResources.LMPView_Languages_Filtered}"
+						   Visibility="{Binding Filter, Converter={StaticResource EmptyStringToVisibility}, ConverterParameter=Inverted}" />
+				
+				<TextBlock Text="{Binding FilteredMappedLanguages.Count}"
+						   Visibility="{Binding Filter, Converter={StaticResource EmptyStringToVisibility}, ConverterParameter=Inverted}" 
+						   Margin="2 0 0 0"/>
+			</StackPanel>
 
 			<Separator Grid.Row="4"
 					   VerticalAlignment="Top"
 					   Background="#FFBFCDD4" />
 
-			<Button Content="Reset to defaults"
+			<Button Content="{x:Static root:PluginResources.LMPView_Buttons_Reset}"
 					Command="{Binding ResetToDefaultCommand}"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					Grid.Row="4"
@@ -118,12 +134,7 @@
 						HorizontalAlignment="Right"
 						Margin="16">
 
-				<TextBlock Text="{Binding Loading}"
-						Cursor="Hand"
-						Width="120"
-						/>
-
-				<Button Content="OK"
+				<Button Content="{x:Static root:PluginResources.LMPView_Buttons_ApplyChanges}"
 						Command="{Binding ApplyChangesCommand}"
 						Style="{StaticResource Sdl.Button.SecondaryStyle}"
 						Cursor="Hand"
@@ -133,8 +144,8 @@
 						Width="120"
 						Margin="16 0" />
 
-				<Button Content="Cancel"
-						Command="{Binding CancelChangesCommand}"
+				<Button Content="{x:Static root:PluginResources.LMPView_Buttons_Close}"
+						Command="{Binding CloseLanguageMappingProviderCommand}"
 						Style="{StaticResource Sdl.Button.SecondaryStyle}"
 						Cursor="Hand"
 						FontSize="11"
@@ -142,6 +153,7 @@
 						Height="26"
 						Width="120" />
 			</StackPanel>
+			
 		</Grid>
 	</Border>
 </Window>
