--- a/LanguageWeaverProvider/View/ErrorDialogView.xaml
+++ b/LanguageWeaverProvider/View/ErrorDialogView.xaml
@@ -3,6 +3,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:local="clr-namespace:LanguageWeaverProvider.View"
 		xmlns:viewmodel="clr-namespace:LanguageWeaverProvider.ViewModel"
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
@@ -74,32 +75,33 @@
 				   FontSize="14"
 				   Margin="32 32 0 0" />
 
-		<StackPanel Grid.Row="2"
-					Grid.Column="0"
-					Orientation="Horizontal"
-					Visibility="{Binding CanDisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}}"
-					Margin="16 0 0 8">
-			<Button Content="Show details"
+		<Grid Grid.Row="2"
+			  Grid.Column="0"
+			  Visibility="{Binding CanDisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}}"
+			  Margin="16 0 0 8"
+			  HorizontalAlignment="Left">
+			<Button Content="{x:Static root:PluginResources.ErrorView_Buttons_ShowDetails}"
 					Style="{StaticResource TransparentButtonStyle}"
 					Visibility="{Binding DisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
 					Command="{Binding DisplayReportCommand}"
 					FontSize="11"
 					FontWeight="DemiBold"
 					Foreground="#008080" />
-			<Button Content="Hide details"
+
+			<Button Content="{x:Static root:PluginResources.ErrorView_Buttons_HideDetails}"
 					Style="{StaticResource TransparentButtonStyle}"
 					Visibility="{Binding DisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}}"
 					Command="{Binding DisplayReportCommand}"
 					FontSize="11"
 					FontWeight="DemiBold"
 					Foreground="#008080" />
-		</StackPanel>
+		</Grid>
 
 		<StackPanel Grid.Row="2"
 					Grid.Column="1"
 					Orientation="Horizontal"
 					Margin="0 0 16 8">
-			<Button Content="Save report"
+			<Button Content="{x:Static root:PluginResources.ErrorView_Buttons_SaveReport}"
 					Command="{Binding SaveReportCommand}"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					Visibility="{Binding CanDisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -107,7 +109,7 @@
 					FontWeight="DemiBold"
 					Width="112"
 					Margin="0 0 8 0" />
-			<Button Content="Close"
+			<Button Content="{x:Static root:PluginResources.ErrorView_Buttons_Close}"
 					Command="{Binding CloseDialogCommand}"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					FontSize="11"
@@ -117,11 +119,11 @@
 		</StackPanel>
 
 		<Grid Grid.Row="3"
-					Grid.ColumnSpan="2"
-					Visibility="{Binding DisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}}"
-					Height="300"
-					HorizontalAlignment="Center"
-					VerticalAlignment="Stretch">
+			  Grid.ColumnSpan="2"
+			  Visibility="{Binding DisplayDetailedReport, Converter={StaticResource BooleanToVisibilityConverter}}"
+			  Height="300"
+			  HorizontalAlignment="Center"
+			  VerticalAlignment="Stretch">
 
 			<Border BorderBrush="Black"
 					BorderThickness="1"
@@ -133,7 +135,7 @@
 								KernelType="Gaussian" />
 				</Border.Effect>
 			</Border>
-			
+
 			<Border BorderBrush="Transparent"
 					Height="290"
 					Padding="4"
@@ -142,7 +144,6 @@
 						 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 						 TextWrapping="Wrap" />
 			</Border>
-
 
 		</Grid>
 	</Grid>
